5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4431/executions/1692_1879.log
== TEST (2019-04-24 01:16:37) 
-- CODE:
x=float(input("Digite o numero de horas extras :"))
y=float(input("Digite o numero de horas de faltas: "))
h=x-(y*0.25)
if(h>400)
   print(x,"extras e",y,"de falta")
	print("R$ 500.00")
else:
	print(x,"extras e",y,"de falta")
	print("R$ 100.00")
-- ERROR:
File "XXXX", line 4
    if(h>400)
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 01:16:46) 
-- CODE:
x=float(input("Digite o numero de horas extras :"))
y=float(input("Digite o numero de horas de faltas: "))
h=x-(y*0.25)
if(h>400):
   print(x,"extras e",y,"de falta")
	print("R$ 500.00")
else:
	print(x,"extras e",y,"de falta")
	print("R$ 100.00")
-- ERROR:
File "XXXX", line 6
    print("R$ 500.00")
                     ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 01:17:08) 
-- CODE:
x=float(input("Digite o numero de horas extras :"))
y=float(input("Digite o numero de horas de faltas: "))
h=x-(y*0.25)
if(h>400):
   print(x,"extras e",y,"de falta")
	print("R$500.00")
else:
	print(x,"extras e",y,"de falta")
	print("R$ 100.00")
-- ERROR:
File "XXXX", line 6
    print("R$500.00")
                    ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 01:17:26) 
-- CODE:
x=float(input("Digite o numero de horas extras :"))
y=float(input("Digite o numero de horas de faltas: "))
h=x-(y*0.25)
if(h>400):
      print(x,"extras e",y,"de falta")
	   print("R$ 500.00")
else:
	print(x,"extras e",y,"de falta")
	print("R$ 100.00")
-- ERROR:
File "XXXX", line 6
    print("R$ 500.00")
                     ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 01:17:46) 
-- CODE:
x=float(input("Digite o numero de horas extras :"))
y=float(input("Digite o numero de horas de faltas: "))
h=x-(y*0.25)
if(h>400):
	print(x,"extras e",y,"de falta")
	print("R$ 500.00")
else:
	print(x,"extras e",y,"de falta")
	print("R$ 100.00")
-- OUTPUT:
420.0 extras e 20.0 de falta
R$ 500.00
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 01:18:21) 
-- CODE:
x=float(input("Digite o numero de horas extras :"))
y=float(input("Digite o numero de horas de faltas: "))
h=x-(y*0.25)
if(h>400):
	print(x,"extras e",y,"de falta")
	print("R$ 500.00")
else:
	print(x,"extras e",y,"de falta")
	print("R$ 100.00")
-- EXECUTION TIME:
0.141478
-- TEST CASE 1:
---- input:
420
20
---- correct output:
420.0 extras e 20.0 de falta
R$ 500.0
---- user output:
420.0 extras e 20.0 de falta
R$ 500.00
-- TEST CASE 2:
---- input:
400.5
100
---- correct output:
400.5 extras e 100.0 de falta
R$ 100.0
---- user output:
400.5 extras e 100.0 de falta
R$ 100.00
-- TEST CASE 3:
---- input:
300
44
---- correct output:
300.0 extras e 44.0 de falta
R$ 100.0
---- user output:
300.0 extras e 44.0 de falta
R$ 100.00
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 01:19:14) 
-- CODE:
x=float(input("Digite o numero de horas extras :"))
y=float(input("Digite o numero de horas de faltas: "))
h=x-(y*0.25)
if(h>400):
	print(x,"extras e",y,"de falta")
	print("R$ 500.0")
else:
	print(x,"extras e",y,"de falta")
	print("R$ 100.0")
-- EXECUTION TIME:
0.129193
-- TEST CASE 1:
---- input:
420
20
---- correct output:
420.0 extras e 20.0 de falta
R$ 500.0
---- user output:
420.0 extras e 20.0 de falta
R$ 500.0
-- TEST CASE 2:
---- input:
400.5
100
---- correct output:
400.5 extras e 100.0 de falta
R$ 100.0
---- user output:
400.5 extras e 100.0 de falta
R$ 100.0
-- TEST CASE 3:
---- input:
300
44
---- correct output:
300.0 extras e 44.0 de falta
R$ 100.0
---- user output:
300.0 extras e 44.0 de falta
R$ 100.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-26 01:22:23) 
-- CODE:
x=float(input("Digite o numero de horas extras :"))
y=float(input("Digite o numero de horas de faltas: "))
h=x-(y*0.25)
if(h>400):
	print(x,"extras e",y,"de falta")
	print("R$ 500.0")
else:
	print(x,"extras e",y,"de falta")
	print("R$ 100.0")
-- EXECUTION TIME:
0.129362
-- TEST CASE 1:
---- input:
420
20
---- correct output:
420.0 extras e 20.0 de falta
R$ 500.0
---- user output:
420.0 extras e 20.0 de falta
R$ 500.0
-- TEST CASE 2:
---- input:
400.5
100
---- correct output:
400.5 extras e 100.0 de falta
R$ 100.0
---- user output:
400.5 extras e 100.0 de falta
R$ 100.0
-- TEST CASE 3:
---- input:
300
44
---- correct output:
300.0 extras e 44.0 de falta
R$ 100.0
---- user output:
300.0 extras e 44.0 de falta
R$ 100.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
